# otcv8-rookhaven

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  init.lua  test_load_affixes.lua  vcpkg.json
.github/: copilot-instructions.md
data/styles/: 40-healthinfo.otui
layouts/retro/styles/: 40-entergame.otui
modules/client_background/: background.lua  background.otui
modules/client_entergame/: characterlist.lua  entergame.lua  entergame.otui
modules/client_options/: audio.otui  custom.otui  graphics.otui  options.lua
modules/game_affixes/: GRAPHICS_README.md  SPRITE_SHEET_IMPLEMENTATION.md  affixes.lua  affixes.lua.backup_before_images  affixes.lua.backup_before_widget_hook  affixes.otmod  affixes.otui
modules/game_containers/: containers.lua
modules/game_features/: features.lua
modules/game_healthinfo/: healthinfo.lua
modules/game_inventory/: inventory.lua
src/: main.cpp
src/client/: item.cpp  item.h  luafunctions_client.cpp  outfit.cpp  protocolgameparse.cpp  uiitem.cpp  uimap.h
src/framework/: CMakeLists.txt  const.h  pch.h
src/framework/boost/asio/: io_service.hpp
src/framework/boost_compat/: io_service.hpp
src/framework/cmake/: 1FindZLIB.cmake  FindBZip2.cmake  FindGLEW.cmake  FindLibZip.cmake  FindLuaJIT.cmake  FindOpenSSL.cmake  FindPhysFS.cmake  FindZLIB.cmake
src/framework/core/: application.h  modulemanager.cpp  resourcemanager.cpp  resourcemanager.h
src/framework/http/: session.cpp  session.h  websocket.cpp  websocket.h
src/framework/net/: connection.cpp  connection.h
src/framework/proxy/: proxy_client.cpp
src/framework/stdext/: net.cpp  types.h
